Column Size Preview: Increase `min-width` to Prevent Overlap

--- a/css/admin.less
+++ b/css/admin.less
@@ -1716,7 +1716,7 @@
 								min-width: 26px;
 								padding: 0 !important;
 								text-align: center;
-								min-width: 25px;
+								min-width: 35px;
 
 								&:last-of-type {
 									border-right: none;
